<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="@string/movie_detail_transition_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMovieActivity">


        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/avengers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/mask_vector"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@id/main_image"
            app:layout_constraintStart_toStartOf="@id/main_image"
            app:layout_constraintTop_toTopOf="@id/main_image"
            app:layout_constraintBottom_toBottomOf="@id/main_image"/>

        <ImageView
            android:id="@+id/path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/path"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAppearance="@style/back"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/path"
            app:layout_constraintTop_toTopOf="@id/path"
            app:layout_constraintBottom_toBottomOf="@id/path"/>

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/rectangle"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/movieName"/>

        <TextView
            android:id="@+id/tv_minimum_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rectangle_text"
            android:textAppearance="@style/rectangle_text"
            app:layout_constraintStart_toStartOf="@id/rectangle"
            app:layout_constraintTop_toTopOf="@id/rectangle"
            app:layout_constraintEnd_toEndOf="@id/rectangle"
            app:layout_constraintBottom_toBottomOf="@id/rectangle"/>

        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            tools:text="@string/movie_name_avengers"
            android:textAppearance="@style/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_image"
            app:layout_constraintVertical_bias="0.393" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_genre"
            android:textAppearance="@style/movieGenre"
            app:layout_constraintTop_toBottomOf="@+id/movieName" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            style="?android:attr/ratingBarStyleSmall"
            android:theme="@style/MyStyleRatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieGenre"

            />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8.69dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/review"
            android:textAppearance="@style/review"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/movieGenre" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textAppearance="@style/storyline"
            app:layout_constraintTop_toBottomOf="@id/rating_bar" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            tools:text="@string/description_avengers"
            android:textAppearance="@style/description"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/cast"
            android:textAppearance="@style/cast"
            app:layout_constraintTop_toBottomOf="@id/description" />

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycler_actor"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_marginStart="8dp"
           android:layout_marginEnd="16dp"
           android:scrollbars="horizontal"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/cast"
           app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>