<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/iv_back_avengers_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_avengers_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        tools:src="@drawable/avengers_movie"
        app:layout_constraintStart_toStartOf="@id/iv_back_avengers_movie"
        app:layout_constraintTop_toTopOf="@id/iv_back_avengers_movie"
        app:layout_constraintEnd_toEndOf="@id/iv_back_avengers_movie"/>

    <ImageView
        android:id="@+id/mask_avengers_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mask_avengers_movie"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@+id/iv_avengers_movie"
        app:layout_constraintStart_toStartOf="@+id/iv_avengers_movie"
        app:layout_constraintEnd_toEndOf="@+id/iv_avengers_movie"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie"
        />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="10dp"
        android:numStars="5"
        style="?android:attr/ratingBarStyleSmall"
        android:theme="@style/MyStyleRatingBar"
        app:layout_constraintStart_toStartOf="@id/iv_avengers_movie"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie"
        />


    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8.69dp"
        android:gravity="center_vertical"
        android:textSize="8sp"
        android:lineSpacingExtra="4sp"
        android:text="@string/review"
        android:textColor="#6D6D80"
        app:layout_constraintStart_toEndOf="@id/rating_bar"
        app:layout_constraintTop_toTopOf="@id/rating_bar"
        app:layout_constraintBottom_toBottomOf="@id/rating_bar"
        />

    <TextView
        android:id="@+id/movieGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        android:text="@string/movie_genre"
        android:textSize="8sp"
        android:textColor="#FF3466"
        app:layout_constraintStart_toStartOf="@id/iv_avengers_movie"
        app:layout_constraintBottom_toTopOf="@id/rating_bar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/movie_name_avengers"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#ECECEC"
        app:layout_constraintStart_toStartOf="@id/iv_back_avengers_movie"
        app:layout_constraintTop_toBottomOf="@id/iv_avengers_movie"/>
    <TextView
        android:id="@+id/tv_runtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avengers_minutes"
        android:textSize="8sp"
        android:textColor="#565665"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/iv_back_avengers_movie"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <ImageView
        android:id="@+id/rectangle_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/iv_back_avengers_movie"
        app:layout_constraintTop_toTopOf="@id/iv_back_avengers_movie"/>
    <TextView
        android:id="@+id/tv_minimum_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rectangle_text"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="@id/rectangle_movie"
        app:layout_constraintTop_toTopOf="@id/rectangle_movie"
        app:layout_constraintEnd_toEndOf="@id/rectangle_movie"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_movie"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/iv_back_avengers_movie"
        app:layout_constraintTop_toTopOf="@id/iv_back_avengers_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>