<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        />

    <ImageView
        android:id="@+id/path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/target"
        android:layout_marginStart="18dp"
        android:layout_marginTop="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movies_list"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/path"
        app:layout_constraintTop_toTopOf="@id/path"
        app:layout_constraintBottom_toBottomOf="@id/path"/>

    <ImageView
        android:id="@+id/iv_avengers_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/avengers_movie"
        android:layout_margin="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/path"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mask_avengers_movie"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@+id/iv_avengers_movie"
        app:layout_constraintStart_toStartOf="@+id/iv_avengers_movie"
        app:layout_constraintEnd_toEndOf="@+id/iv_avengers_movie"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie"
        />

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/star_icon_red"
        app:layout_constraintStart_toStartOf="@id/iv_avengers_movie"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="3.25dp"
        android:src="@drawable/star_icon_red"
        app:layout_constraintStart_toEndOf="@id/star_1"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="3.25dp"
        android:src="@drawable/star_icon_red"
        app:layout_constraintStart_toEndOf="@id/star_2"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="3.25dp"
        android:src="@drawable/star_icon_red"
        app:layout_constraintStart_toEndOf="@id/star_3"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie" />

    <ImageView
        android:id="@+id/star_5"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="3.25dp"
        android:src="@drawable/star_icon_grey"
        app:layout_constraintStart_toEndOf="@id/star_4"
        app:layout_constraintBottom_toBottomOf="@id/iv_avengers_movie" />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8.69dp"
        android:gravity="center_vertical"
        android:textSize="8sp"
        android:lineSpacingExtra="4sp"
        android:text="@string/review"
        android:textColor="#6D6D80"
        app:layout_constraintStart_toEndOf="@id/star_5"
        app:layout_constraintTop_toTopOf="@id/star_1"
        app:layout_constraintBottom_toBottomOf="@id/star_1"
        />

    <TextView
        android:id="@+id/movieGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        android:text="@string/movie_genre"
        android:textSize="8sp"
        android:textColor="#FF3466"
        app:layout_constraintStart_toStartOf="@id/iv_avengers_movie"
        app:layout_constraintBottom_toTopOf="@id/star_1" />


</androidx.constraintlayout.widget.ConstraintLayout>